--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>GOV.UK - The best place to find government services and information</title>
+  <title>DfE KtS Training Prototype</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="theme-color" content="#0b0c0c" />
 
@@ -17,7 +17,7 @@
   <link rel="apple-touch-icon" href="/assets/images/govuk-apple-touch-icon.png">
 
   <!--[if !IE 8]><!-->
-  <link href="/govuk-frontend/govuk/all.css" rel="stylesheet" />
+  <link href="/assets/css/application.css" rel="stylesheet" />
   <!--<![endif]-->
 
   <!--[if IE 8]>
